--- a/index.html
+++ b/index.html
@@ -2,16 +2,37 @@
 <html>
 <head>
     <title>BeerDebt</title>
+
+    <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_topnav-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="main.css">
     <script>
 
         var arr = ["Marc", "Flavio", "Adrian", " Samuel"];
         async function showname(){
             document.getElementById("show").innerText = arr[Math.random()*arr.length|0];
         }
+
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
     </script>
 </head>
 
 <body>
+
+<div class="topnav" id="myTopnav">
+    <a href="#home" class="active">Home</a>
+    <a href="#users">Users</a>
+    <a class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
+</div>
 
 <button id="btn" onclick="showname()" style="background: red; color: white; border-radius: 500px; width: 200px; height: 200px; font-size: 60px">test</button>
 <p id="show"></p>
